[package]
name = "atlantinator"
version = "0.1.0"
edition = "2021"
authors = ["Till Wege"]
description = "A tool to generate a texture-atlas form a folder of images."
readme = "readme.md"
keywords = ["texture", "atlas", "image", "png", "pixelart"]
categories = ["command-line-utilities"]
repository = "https://github.com/TillWege/Atlantinator"
homepage = "https://github.com/TillWege/Atlantinator"
license = "MIT"
license-file = "LICENSE.md"
exclude = [
    "testing/*",
    "*.png"
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.5"
